# Biotech

./: Cargo.toml
aln/aln-energy-ledger/: Cargo.toml
aln/aln-energy-ledger/src/: lib.rs
aln/aln-energy-ledger/src/sealed_refactor/: mod.rs
aln/aln-energy-ledger/src/ub_security/: mod.rs
aln/aln-energy-ledger/tests/: ub_security_replay.rs
biophysical-blockchain/: Cargo.toml
biotech-civic-analyzer/: Cargo.toml
biotech-civic-analyzer/src/: aln_emit.rs  main.rs  model.rs
civic-doctrine-lint/: Cargo.toml
civic-evolution-engine/: Cargo.toml
config/: aln_energy_profile_v1.json
crates/cybernano-viability-kernel/: Cargo.toml
crates/cybernano-viability-kernel/src/: check.rs  lib.rs  loader.rs  model.rs
docs/: ALN can outperform conventional token and energy s.docx  (+8 more)
rust-learn-cybernetics/: Cargo.toml  README.md
rust-learn-cybernetics/crates/aln-62304-bridge/: Cargo.toml
rust-learn-cybernetics/crates/aln-62304-bridge/src/: mapping.rs
rust-learn-cybernetics/crates/aln-chat-core/: Cargo.toml
rust-learn-cybernetics/crates/aln-chat-core/src/: block.rs  header_macro.rs  lib.rs
rust-learn-cybernetics/crates/aln-core/: Cargo.toml
rust-learn-cybernetics/crates/aln-core/src/: did.rs  lib.rs  particle.rs  roles.rs
rust-learn-cybernetics/crates/aln-templates/: Cargo.toml
rust-learn-cybernetics/crates/aln-templates/src/: clauses.rs  lib.rs  registry.rs
rust-learn-cybernetics/crates/bioscale-evidence/: Cargo.toml
rust-learn-cybernetics/crates/bioscale-evidence/src/: evidence_to_envelope.rs  lib.rs  registries.rs
rust-learn-cybernetics/crates/bioscale-evolution-cli/: Cargo.toml
rust-learn-cybernetics/crates/bioscale-evolution-cli/src/: main.rs
rust-learn-cybernetics/crates/bioscale-invariants/: Cargo.toml
rust-learn-cybernetics/crates/bioscale-invariants/src/: energy.rs  latency.rs  lib.rs  rollback.rs
rust-learn-cybernetics/crates/bioscale-metrics/: Cargo.toml
rust-learn-cybernetics/crates/bioscale-metrics/src/: descriptors.rs  lib.rs
rust-learn-cybernetics/crates/bioscale-upgrade-macros/: Cargo.toml
rust-learn-cybernetics/crates/bioscale-upgrade-macros/src/: bioscaleupgrade.rs  lib.rs
rust-learn-cybernetics/crates/bioscale-upgrade-store/: Cargo.toml
rust-learn-cybernetics/crates/bioscale-upgrade-store/src/: evaluate.rs  lib.rs  types.rs
rust-learn-cybernetics/crates/cybernano-guard/: Cargo.toml
rust-learn-cybernetics/crates/cybernano-guard/src/: guard.rs
rust-learn-cybernetics/crates/cyberswarm-neurostack/: Cargo.toml
rust-learn-cybernetics/crates/cyberswarm-neurostack/src/: bci_adapter.rs  lib.rs  routing.rs
rust-learn-cybernetics/docs/: chat-grammar.md  evidence-tags.md
rust-learn-cybernetics/docs/whitepaper/: evidence_envelope_kani_aln.md
rust-learn-cybernetics/scripts/: daily_evolution.sh
(+75 files in other folders)
