[package]
name = "biotech-civic-analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Analyze CivicAuditLog JSONL and emit updated civic-reward-profile.aln with hex-proof justification for Biotech biophysical-blockchains."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Reuse shared types so audit parsing stays consistent with the service.
bci-ledger-service = { path = "../bci-ledger-service" }
