[workspace]
members = [
    "crates/bioscale-evidence",
    "crates/bioscale-invariants",
    "crates/bioscale-upgrade-store",
    "crates/bioscale-upgrade-macros",
    "crates/aln-core",
    "crates/aln-templates",
    "crates/aln-chat-core",
    "crates/cyberswarm-neurostack",
    "crates/cybernano-guard",
    "crates/bioscale-metrics",
    "crates/bioscale-evolution-cli",
    "crates/aln-62304-bridge",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["rust-learn-cybernetics project"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
once_cell = "1.19"
kani = "0.50.0" # for proofs [web:1][web:2]
