[package]
name = "aln-energy-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
async-trait = "0.1"

# Optional DB deps for ub_security
sqlx = { version = "0.7", optional = true, features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
proptest = "1.0"

[features]
# Feature to enable UBSecurity and Postgres-backed replay protection
ub_security = ["sqlx", "tokio"]
